fix: h1 was too big on small screens

--- a/src/index.css
+++ b/src/index.css
@@ -160,6 +160,11 @@ h1 {
   letter-spacing: -1.5px;
   line-height: 1.1;
 }
+@media (max-width: 700px) {
+  h1 {
+    font-size: 60px;
+  }
+}
 
 h2 {
   font-family: var(--font-family-headline);
